--- a/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -69,7 +69,7 @@ FAVOURITES\ EXPORT\ FILE=Favourites export file
 EXPORT\ SELECTION=Export selection
 REFRESH=Refresh
 IMPORT\ FROM\ DISK=Import from disk
-FAVOURITES_THE\ DIRECTORY\ SHOULD\ CONTAIN\ A\ FILE\ CALLED=The directory should contain a file called %s.\n
+FAVOURITES_THE\ DIRECTORY\ SHOULD\ CONTAIN\ A\ FILE\ CALLED=The directory should contain a file called %s.
 FAVOURITES_PRESS\ THE\ IMPORT\ BUTTON=Press the import button, then choose an existing directory that has an exported collection of favourites. 
 EXPORT\ FAVOURITES=Export favourites
 IMPORT\ FAVOURITES=Import favourites
@@ -185,7 +185,7 @@ RE\ IMPORT\ BRANCH=Re-import Branch
 ADDING\ A\ NODE\ WILL\ SAVE\ PENDING\ CHANGES=Adding a node will save pending changes to "%s" to disk. Do you want to proceed?
 PROFILES_REFRESH\ LIST=Refresh list
 PAGE\ NOT\ FOUND=Page not found
-<P><STRONG>I/O\ EXCEPTION\ WHILE\ READING\ HELP\ CONTENTS</STRONG></P>=<p><strong>I/O exception while reading help contents</strong></p>\n
+<P><STRONG>I/O\ EXCEPTION\ WHILE\ READING\ HELP\ CONTENTS</STRONG></P>=<p><strong>I/O exception while reading help contents</strong></p>
 CONTENTS=Contents
 HELP\ CONTENTS\ NOT\ FOUND=Help contents not found
 HELP=Help
