--- a/src/main/resources/nl/mpi/arbil/localisation/Widgets_es.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Widgets_es.properties
@@ -7,7 +7,7 @@ SESSION=Sesi\u00f3n
 \ (LOADING)=\ (cargando)
 OTHER=Otro
 DELETE\ NODE=Eliminar nodo
-ERROR\ DELETING\ NODE,\ CHECK\ THE\ LOG\ FILE\ VIA\ THE\ HELP\ MENU\ FOR\ MORE\ INFORMATION.=Error en la eliminaci\u00f3n del nodo, ver registro de errores en el menu Gu\u00eda para m\u00e1s informaciones.
+ERROR\ DELETING\ NODE,\ CHECK\ THE\ LOG\ FILE\ VIA\ THE\ HELP\ MENU\ FOR\ MORE\ INFORMATION.=Error al eliminar el nodo, ver registro de errores en el menu Gu\u00eda para m\u00e1s informaciones.
 FAILED\ TO\ LOAD\ {0}\ LOCATIONS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=No se pudieron cargar {0} ubicaciones. Ver registro de errores para m\u00e1s detalles.
 ERROR=Error
 COULD\ NOT\ FIND\ OR\ LOAD\ LOCATIONS.\ ADDING\ DEFAULT\ LOCATIONS.=No se pudieron encontrar o cargar las ubicaciones. Se a\u00f1adir\u00e1n las ubicaciones predeterminadas.
@@ -20,7 +20,7 @@ FILES=Archivos
 REMEMBER\ MY\ CHOICE=Recordar mi elecci\u00f3n 
 \ FORMATTED=\ con formato
 VIEW\ IMDI\ XML=Ver IMDI en XML
-THE\ NODE\ MUST\ BE\ SAVED\ FIRST.SAVE\ NOW?=El nodo necesita ser guardado antes de seguir.\n\u00bfGuardar ahora?
+THE\ NODE\ MUST\ BE\ SAVED\ FIRST.SAVE\ NOW?=El nodo necesita ser guardado antes de continuar.\n\u00bfGuardar ahora?
 FAILED\ TO\ OPEN\ THE\ REMOTE\ LOCATION\:\ {0}=No se pudo abrir la ubicaci\u00f3n remota: {0}
 OPEN\ IN\ EXTERNAL\ APPLICATION=Abrir en aplicaci\u00f3n externa
 FAILED\ TO\ OPEN\ THE\ FILE.\ PLEASE\ CHECK\ THAT\ IT\ IS\ ACCESSIBLE\ AND\ HAS\ AN\ APPLICATION\ ASSOCIATED\ WITH\ IT.DO\ YOU\ WANT\ TO\ OPEN\ THE\ PARENT\ DIRECTORY?=No se pudo abrir el archivo. Comprobar que \u00e9ste sea accesible y que est\u00e9 asociado a una aplicaci\u00f3n.\n\n\u00bfAbrir el directorio primario?
@@ -33,7 +33,7 @@ THE\ EXPORT\ DIRECTORY\ {0}\ DOES\ NOT\ EXIST.PLEASE\ SELECT\ OR\ CREATE\ A\ DIR
 \ DESTINATION\ DIRECTORY=Directorio de destino
 SAVE\ CHANGES=Guardar los cambios
 THERE\ ARE\ UNSAVED\ CHANGES.SAVE\ NOW?=Hay cambios sin guardar.\n\u00bfGuardar ahora?
-ERROR\ WHILE\ TRYING\ TO\ SHOW\ LICENSE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Error en la visualizaci\u00f3n de la licencia. Ver registro de errores para m\u00e1s detalles.
+ERROR\ WHILE\ TRYING\ TO\ SHOW\ LICENSE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Error en la visualizazi\u00f3n de la licencia. Ver registro de errores para m\u00e1s detalles.
 LICENSE=Licencia
 ABOUT\ {0}=Sobre {0}
 CLOSE=Cerrar
@@ -47,16 +47,16 @@ VALUE=Valor
 RESOURCE=Recurso
 NOT\ SUPPORTED=No compatible
 MOVING\ IMDI\ METADATA\ TO\ CMDI\ METADATA\ FILES\ IS\ CURRENTLY\ NOT\ SUPPORTED=Todav\u00eda no se pueden transferir los metadatos IMDI a los archivos de metadatos CMDI
-INSERT\ NODE\ ERROR=Error en la inserci\u00f3n del nodo
-ERROR\ MOVING\ NODES=Error al mover nodos
-COULD\ NOT\ MOVE\ %S\ DUE\ TO\ ERROR.\ SEE\ LOG\ FOR\ DETAILS.\ CONTINUE\ MOVING\ NODES?=No se pudo mover %s por un error. Ver registro de errores para m\u00e1s detalles. \u00bfSeguir moviendo nodos?
+INSERT\ NODE\ ERROR=Error al insertar el nodo
+ERROR\ MOVING\ NODES=Error al mover los nodos
+COULD\ NOT\ MOVE\ %S\ DUE\ TO\ ERROR.\ SEE\ LOG\ FOR\ DETAILS.\ CONTINUE\ MOVING\ NODES?=No se pudo mover %s por un error. Ver registro de errores para m\u00e1s detalles. \u00bfSeguir moviendo los nodos?
 CANCEL=Cancelar
 ABORT=Anular
 SKIP=Saltar
 MOVE\ ALL=Mover todo
 MOVE=Mover
 MOVE_SOURCE_NODE_TO_TARGET_NODE=\u00bfMover %s a %s?
-SELECT\ EXPORT\ DESTINATION=Seleccionar destino de exportaci\u00f3n
+SELECT\ EXPORT\ DESTINATION=Seleccionar destino de la exportaci\u00f3n
 SELECT\ NODES\ TO\ EXPORT=Seleccionar nodos para exportar
 NO\ NODES\ ARE\ SELECTED.\ SELECT\ AT\ LEAST\ ONE\ NODE\ TO\ EXPORT.=Ning\u00fan nodo ha sido seleccionado. Seleccionar como m\u00ednimo un nodo para exportar.
 AN\ ERROR\ OCCURRED\ WHILE\ EXPORTING\ FAVOURITES=Se ha producido un error en la exportaci\u00f3n de los favoritos:\n%s.\nVer registro de errores para m\u00e1s detalles.
@@ -66,7 +66,7 @@ FAVOURITES_AN\ ERROR\ OCCURRED\ WHILE\ IMPORTING\ FAVOURITES=Se ha producido un 
 IMPORT\ COMPLETE=Importaci\u00f3n completada
 FAVOURITES\ HAVE\ BEEN\ IMPORTED=Los favoritos han sido importados correctamente
 SELECT\ FAVOURITES\ EXPORT\ TO\ IMPORT=Seleccionar los favoritos exportados para importar
-FAVOURITES\ EXPORT\ FILE=Archivo de exportaci\u00f3n de los favoritos
+FAVOURITES\ EXPORT\ FILE=Archivo de favoritos exportados
 EXPORT\ SELECTION=Exportar selecci\u00f3n
 REFRESH=Actualizar
 IMPORT\ FROM\ DISK=Importar desde disco
@@ -91,20 +91,20 @@ ERROR\ WHILE\ GETTING\ WIZARD\ TEXT.\ PLEASE\ CHECK\ THE\ ERROR\ LOG.=Error en e
 DISCARD\ CHANGES=Descartar cambios
 DOING\ THIS\ WILL\ RESET\ THE\ LIST\ OF\ REMOTE\ LOCATIONS.\ DO\ YOU\ WANT\ TO\ GO\ BACK\ A\ STEP\ IN\ THE\ WIZARD?=Se restablecer\u00e1 la lista de ubicaciones remotas. \u00bfRetroceder al paso anterior del asistente?
 SETUP_NO\ LOCATIONS\ SPECIFIED=Ninguna ubicaci\u00f3n especificada
-SETUP_YOU\ HAVE\ NOT\ YET\ SPECIFIED\ ANY\ REMOTE\ LOCATIONS.\ ARE\ YOU\ SURE\ YOU\ WANT\ TO\ CONTINUE?=Todav\u00eda no se ha especificado ninguna ubicaci\u00f3n remota. \u00bfContinuar?
+SETUP_YOU\ HAVE\ NOT\ YET\ SPECIFIED\ ANY\ REMOTE\ LOCATIONS.\ ARE\ YOU\ SURE\ YOU\ WANT\ TO\ CONTINUE?=Todav\u00eda no se ha especificado ninguna ubicaci\u00f3n remota. \u00bfEst\u00e1 seguro de querer continuar?
 SETUP_SELECT\ A\ METADATA\ FORMAT=Seleccionar un formato de metadatos
-SETUP_SELECT\ AT\ LEAST\ ONE\ OF\ THE\ OPTIONS\ BEFORE\ CONTINUING=Seleccionar como m\u00ednimo una de las opciones antes de seguir
+SETUP_SELECT\ AT\ LEAST\ ONE\ OF\ THE\ OPTIONS\ BEFORE\ CONTINUING=Seleccionar como m\u00ednimo una de las opciones antes de continuar
 SETUP_NO\ PROFILES\ SELECTED=Ning\u00fan perfil seleccionado 
-SETUP_YOU\ HAVE\ NOT\ YET\ SELECTED\ PROFILES\ TO\ USE.\ ARE\ YOU\ SURE\ YOU\ WANT\ TO\ CONTINUE?=Todav\u00eda no se ha seleccionado ning\u00fan perfil para usar. \u00bfContinuar?
+SETUP_YOU\ HAVE\ NOT\ YET\ SELECTED\ PROFILES\ TO\ USE.\ ARE\ YOU\ SURE\ YOU\ WANT\ TO\ CONTINUE?=Todav\u00eda no se ha seleccionado ning\u00fan perfil. \u00bfEst\u00e1 seguro de querer continuar?
 SETUP_CLARIN\ PROFILES=Perfiles Clarin
 CANCEL\ WIZARD=Cancelar asistente
-FIELD_VIEW_TABLE_SHOW\ ONLY\ CHECKED\ FIELDS\ (HIDES\ ALL\ OTHERS\ AND\ OVERRIDES\ HIDE\ FIELDS)=Mostrar s\u00f3lo campos seleccionados (se ocultar\u00e1n los dem\u00e1s y reemplazar\u00e1n los campos ocultados)
+FIELD_VIEW_TABLE_SHOW\ ONLY\ CHECKED\ FIELDS\ (HIDES\ ALL\ OTHERS\ AND\ OVERRIDES\ HIDE\ FIELDS)=Mostrar s\u00f3lo campos seleccionados (se ocultar\u00e1n todos los dem\u00e1s y se invalidar\u00e1 la opci\u00f3n 'ocultar campos')
 FIELD_VIEW_TABLE_INVALID\ WIDTH\ FOR\ COLUMN\ {0}=Ancho de la columna {0} no v\u00e1lido
 FIELD_VIEW_TABLE_COLUMN\ WIDTH=Ancho columna
 FIELD_VIEW_TABLE_HIDE=Ocultar
 FIELD_VIEW_TABLE_SHOW\ ONLY=Mostrar s\u00f3lo
 FIELD_VIEW_TABLE_COLUMN\ NAME=Nombre de columna
-FIELD_VIEW_TABLE_HIDE\ CHECKED\ FIELDS\ (ONLY\ ACTIVE\ WHEN\ NO\ 'SHOW\ ONLY'\ SELECTION\ IS\ MADE)=Ocultar campos seleccionados (opci\u00f3n activa s\u00f3lo al seleccionar 'mostrar s\u00f3lo')
+FIELD_VIEW_TABLE_HIDE\ CHECKED\ FIELDS\ (ONLY\ ACTIVE\ WHEN\ NO\ 'SHOW\ ONLY'\ SELECTION\ IS\ MADE)=Ocultar campos seleccionados (opci\u00f3n activa s\u00f3lo al seleccionar 'Mostrar s\u00f3lo')
 ARBIL\ LOG\ CONSOLE=Consola del registro de Arbil
 SEARCH_STOP=detener
 SEARCHED\:\ {0}/{1}\ FOUND\:\ {2}=buscado: {0}/{1} encontrado {2}
@@ -118,9 +118,9 @@ NO\ FIELDS\ MATCHED\ THE\ DATA\ ON\ THE\ CLIPBOARD.=Ning\u00fan campo coincide c
 NO\ DATA\ TO\ PASTE.=Ning\u00fan dato para pegar.
 CONTINUE?=\u00bfContinuar?
 THERE\ ARE\ x\ FIELDS\ THAT\ WILL\ HAVE\ THEIR\ CONTENTS\ DELETED\ BY\ THIS\ PASTE\ ACTION=Al pegar, se eliminar\u00e1 el contenido de {0} campos.
-TWO\ FIELDS\ OF\ THE\ SAME\ NAME\ ARE\ TO\ BE\ PASTED=Dos campos con el mismo nombre deben pegarse en esta tabla,\nuno de los dos sobrescribir\u00e1 el otro.
+TWO\ FIELDS\ OF\ THE\ SAME\ NAME\ ARE\ TO\ BE\ PASTED=Dos campos con el mismo nombre deben pegarse en esta tabla,\nuno de los dos sobreescribir\u00e1 el otro.
 INCONSISTENT\ NUMBER\ OF\ COLUMNS\ IN\ THE\ DATA\ TO\ PASTE=El n\u00famero de columnas en los datos para pegar es incoherente.\nLos datos pegados podr\u00edan ser incorrectos.\n
-INCORRECT\ DATA\ TO\ PASTE=Los datos para pegar son incorrectos.\nLos datos se deben copiar desde una tabla donde hay un s\u00f3lo archivo IMDI, \no bien seleccionando celdas individuales en la tabla.
+INCORRECT\ DATA\ TO\ PASTE=Datos para pegar incorrectos.\nLos datos se deben copiar desde una tabla donde hay un s\u00f3lo nodo, \no bien seleccionando celdas individuales en la tabla.
 PASTE=Pegar
 FIELDS\ WILL\ BE\ OVERWRITTEN\ WITH\ THE\ SINGLE\ VALUE\ ON\ THE\ CLIPBOARD=Se sobreescribir\u00e1n %d campos con el valor \u00fanico en el portapapeles.\n\u00bfContinuar?
 SHOWING\ HEADER\ MENU\ FOR\ COLUMN\ {}=mostrar men\u00fa encabezado para columna {0}
@@ -138,7 +138,7 @@ HIGHLIGHT\ MATCHING\ ROWS=Resaltar filas coincidentes
 NO\ ROWS\ HAVE\ BEEN\ SELECTED=Ninguna fila ha sido seleccionada
 DELETE\ FIELD=Eliminar campo
 DELETE\ %D\ INSTANCE\ OF\ THE\ FIELD\ '%S'?=\u00bfEliminar %1$d ejemplo(s) del campo '%2$s'?
-CANNOT\ DELETE=No se pudo eliminar
+CANNOT\ DELETE=No se puede eliminar
 THIS\ FIELD\ CANNOT\ BE\ DELETED\ FROM\ ONE\ OR\ MORE\ OF\ THE\ SHOWN\ NODES=Este campo no se puede eliminar de uno o m\u00e1s de los nodos visualizados
 A\ COLUMN\ VIEW\ WITH\ THE\ SAME\ NAME\ ALREADY\ EXISTS,\ NOTHING\ SAVED=Una vista de columna con el mismo nombre ya existe, no se ha guardado nada
 SAVE\ COLUMN\ VIEW=Guardar vista de columna
@@ -151,21 +151,21 @@ THE\ ORIGIONAL\ FILE\ LOCATION\ CANNOT\ BE\ FOUND=No se puede encontrar la ubica
 SAVE\ PENDING\ CHANGES?=\u00bfGuardar los cambios pendientes?
 ADD\ BULK\ RESOURCES=Agregar recursos en masa
 ADD\ WORKING\ DIRECTORY=Agregar directorio de trabajo
-FAILED\ TO\ ADD\ FROM\ FAVOURITES,\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=No se pudo agregar desde la lista de los favoritos, ver registro de errores para m\u00e1s detalles.
+FAILED\ TO\ ADD\ FROM\ FAVOURITES,\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=No se pudo agregar desde la lista de favoritos, ver registro de errores para m\u00e1s detalles.
 TREE_VALIDATION=Validaci\u00f3n
 VALIDATION\ WILL\ BE\ AGAINST\ THE\ FILE\ ON\ DISK.\ SAVE\ CHANGES\ FIRST?=La validaci\u00f3n ser\u00e1 con el archivo en el disco. \u00bfGuardar los cambios antes de continuar?
 SEARCH\ REMOTE\ CORPUS=Buscar en el corpus remoto
 SEARCH=Buscar
 FAILED\ TO\ ADD\ LOCATION\ TO\ REMOTE\ CORPUS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=No se pudo agregar la ubicaci\u00f3n al corpus remoto. Ver registro de errores para m\u00e1s detalles.
 ADD\ LOCATION=Agregar ubicaci\u00f3n
-ENTER\ THE\ URL=Insertar URL
+ENTER\ THE\ URL=Insertar el URL
 LOCATION\ SHOULD\ BE\ AN\ ABSOLUTE\ URI=La ubicaci\u00f3n deber\u00eda ser un URI absoluto. Esto significa que deber\u00eda empezar con un esquema, por ejemplo "http://" o "file://"
 ILLEGAL\ FILE\ NAME.\ CHECK\ THE\ ERROR\ LOG\ FOR\ DETAILS.=Nombre de archivo no v\u00e1lido. Ver registro de errores para m\u00e1s detalles.
 WARNING\:\ NO\ FILE\ EXISTS\ AT\ THE\ SPECIFIED\ LOCATION!=\u00a1Advertencia: no existe ning\u00fan archivo en la ubicaci\u00f3n especificada!
 ERROR\ ADDING\ RESOURCE=Error al agregar recursos 
-COULD\ NOT\ ADD\ RESOURCE\ TO\ THE\ METADATA.\ CHECK\ THE\ ERROR\ LOG\ FOR\ DETAILS.=No se pudireon agregar recursos a los metadatos. Ver registro de errores para m\u00e1s detalles.
+COULD\ NOT\ ADD\ RESOURCE\ TO\ THE\ METADATA.\ CHECK\ THE\ ERROR\ LOG\ FOR\ DETAILS.=No se pudiereon agregar recursos a los metadatos. Ver registro de errores para m\u00e1s detalles.
 INVALID\ URI=URI no v\u00e1lido
-THE\ URI\ ENTERED\ AS\ A\ RESOURCE\ LOCATION\ IS\ INVALID.\ PLEASE\ CHECK\ THE\ LOCATION\ AND\ TRY\ AGAIN.=El URI utilizado come ubicaci\u00f3n de un recurso no es v\u00e1lido. Comprobar la ubicaci\u00f3n y volver a intentarlo.
+THE\ URI\ ENTERED\ AS\ A\ RESOURCE\ LOCATION\ IS\ INVALID.\ PLEASE\ CHECK\ THE\ LOCATION\ AND\ TRY\ AGAIN.=El URI utilizado come ubicaci\u00f3n del recurso no es v\u00e1lido. Comprobar la ubicaci\u00f3n y volver a intentarlo.
 MANUAL\ RESOURCE\ LOCATION=Ubicaci\u00f3n manual del recurso
 ENTER\ THE\ RESOURCE\ URI\:=Insertar el URI del recurso:
 COULD\ NOT\ DETERMINE\ THE\ ORIGIONAL\ LOCATION=No se pudo determinar la ubicaci\u00f3n original
@@ -200,7 +200,7 @@ BROWSE\ FOR\ LOCAL\ PROFILES=Examinar perfiles locales
 PROFILES_ADD\ FILE=Agregar archivo
 ADD\ PROFILE=Agregar perfil
 ENTER\ THE\ PROFILE\ URL=Insertar el URL del perfil
-PROFILES_ADD\ A\ PROFILE\ URL\ TO\ THE\ LIST=Agregar el URL de un perfil a la lista
+PROFILES_ADD\ A\ PROFILE\ URL\ TO\ THE\ LIST=Agregar un URL de perfil a la lista
 PROFILES_ADD\ URL=Agregar URL
 PROFILES\ SELECTED\ BELOW\ WILL\ BECOME\ AVAILABLE\ IN\ THE\ 'ADD'\ MENU\ OF\ THE\ LOCAL\ CORPUS.\ BY\ DEFAULT,\ ONLY\ SELECTED\ PROFILES\ WILL\ BE\ DOWNLOADED\ FOR\ OFFLINE\ USE.=Los perfiles seleccionados aqu\u00ed abajo ser\u00e1n disponibles en el men\u00fa 'Agregar' del corpus local. De manera predeterminada, s\u00f3lo los perfiles seleccionados se descargar\u00e1n para ser utilizados sin conexi\u00f3n. 
 ONLY\ LOAD\ PROFILES\ SELECTED\ FOR\ MANUAL\ EDITING=Cargar s\u00f3lo los perfiles seleccionados para ser modificados manualmente
@@ -211,7 +211,7 @@ PROFILES_RELOAD\ SELECTION=Volver a cargar selecci\u00f3n
 DOWNLOAD\ THE\ LATEST\ CLARIN\ PROFILES=Descargar los perfiles CMDI m\u00e1s recientes
 TOTAL\ METADATA\ FILES\ FOUND\:\ =Archivos de metadatos encontrados en total:
 TOOLTIP_SCHEMA\ VALIDATION\ ERROR\ (CHECK\ XML\ CONFORMANCE\ FOR\ DETAILS)=Error en la validaci\u00f3n con el esquema (comprobar conformidad con XML para m\u00e1s detalles)
-TOOLTIP_AVAILABLE\ IN\ THE\ FAVOURITES\ MENU=Disponible en el men\u00fa de los favoritos
+TOOLTIP_AVAILABLE\ IN\ THE\ FAVOURITES\ MENU=Disponible en el men\u00fa de 'Favoritos'
 TOOLTIP_UNSAVED\ CHANGES=Cambios sin guardar
 TOOLTIP_HISTORY\ OF\ CHANGES\ ARE\ AVAILABLE=Historial de cambios disponible
 TOOLTIP_FILE\ NOT\ FOUND=No se encontr\u00f3 el archivo
@@ -257,7 +257,7 @@ IMPORT_EXPORT_SHOW/HIDE\ DETAILED\ INFORMATION=Mostrar/ocultar informaci\u00f3n 
 IMPORT_EXPORT_START=Iniciar
 IMPORT_EXPORT_STOP=Detener
 IMPORT_EXPORT_SHIBBOLETH\ AUTHENTICATION\ VIA\ THE\ SURFNET\ METHOD=Autenticaci\u00f3n Shibboleth con m\u00e9todo SURFnet
-IMPORT_EXPORT_LIMIT\ CHARACTERS\ IN\ FILE\ NAMES\ (LAMUS\ FRIENDLY\ FORMAT)=Limitar caracteres de los nombres de archivos (formato apto para LAMUS)
+IMPORT_EXPORT_LIMIT\ CHARACTERS\ IN\ FILE\ NAMES\ (LAMUS\ FRIENDLY\ FORMAT)=Limitar caracteres en nombres de archivos (formato apto para LAMUS)
 IMPORT_EXPORT_RENAME\ METADATA\ FILES\ (TO\ MATCH\ LOCAL\ CORPUS\ TREE\ NAMES)=Cambiar nombre de archivos de metadatos (deben corresponder a los nombres en el \u00e1rbol del corpus local)
 EXPORT_TO\:\ =A:
 EXPORT_FROM\:\ =De:
@@ -267,7 +267,7 @@ IF\ COPYING\ OF\ RESOURCE\ FILES\ IS\ SELECTED,\ ANY\ FILE\ COPY\ ERRORS\ WILL\ 
 VALIDATION\ ERRORS=Errores en la validaci\u00f3n
 WHEN\ THE\ METADATA\ FILES\ ARE\ IMPORTED\ OR\ EXPORTED\ THEY\ WILL\ BE\ VALIDATED\ (FOR\ XML\ SCHEMA\ CONFORMANCE)\ AND\ ANY\ ERRORS\ WILL\ BE\ REPORTED\ HERE=Al ser importados o exportados, los archivos de metadatos ser\u00e1n validados (para la conformidad con el esquema XML) y los posibles errores se notificar\u00e1n aqu\u00ed.
 PROCESS\ DETAILS=Detalles del proceso
-THE\ DETAILS\ OF\ THE\ IMPORT\ /\ EXPORT\ PROCESS\ WILL\ BE\ DISPLAYED\ HERE=Los detalles del proceso de importaci\u00f3n/exportaci\u00f3n se mostrar\u00e1n aqu\u00ed.
+THE\ DETAILS\ OF\ THE\ IMPORT\ /\ EXPORT\ PROCESS\ WILL\ BE\ DISPLAYED\ HERE=Los detalles del proceso de importaci\u00f3n / exportaci\u00f3n se mostrar\u00e1n aqu\u00ed.
 SHOW/HIDE\ ADDITIONAL\ OPTIONS=Mostrar/ocultar opciones adicionales
 IMPORT\ RESOURCE\ FILES\ (IF\ AVAILABLE)=Importar archivos de recursos (si est\u00e1n disponibles)
 EXPORT\ RESOURCE\ FILES\ (IF\ AVAILABLE)=Exportar archivos de recursos (si est\u00e1n disponibles)
@@ -275,7 +275,7 @@ RESOURCE\ FILE\ COPY\ ERRORS\:\ =Errores en la copia del archivo de recursos:
 METADATA\ FILE\ VALIDATION\ ERRORS\:\ =Errores en la validaci\u00f3n del archivo de metadatos:
 METADATA\ FILE\ COPY\ ERRORS\:\ =Errores en la copia del archivo de metadatos:
 METADATA\ FILES\ ALREADY\ IN\ LOCAL\ CORPUS\:\ =Archivos de metadatos ya presentes en el corpus local:
-TOTAL\ METADATA\ FILES\ PROCESSED\:\ =Archivos de matadatos procesados en total:
+TOTAL\ METADATA\ FILES\ PROCESSED\:\ =Archivos de metadatos procesados en total:
 AVAILABLE\ LANGUAGES=Idiomas disponibles
 REMOTE\ SEARCH=B\u00fasqueda remota
 NO\ REMOTE\ SEARCH\ TERM\ PROVIDED,\ CANNOT\ SEARCH\ REMOTELY=No se proporcion\u00f3 ning\u00fan t\u00e9rmino de b\u00fasqueda remota, no se puede llevar a cabo la b\u00fasqueda
@@ -306,9 +306,9 @@ SAVE=Guardar
 ERROR\ SAVING\ CHANGES\ TO\ DISK,\ CHECK\ THE\ LOG\ FILE\ VIA\ THE\ HELP\ MENU\ FOR\ MORE\ INFORMATION.=Error al guardar los cambios en el disco, ver registro de errores en el men\u00fa Gu\u00eda para m\u00e1s informaciones.
 UNKNOWN\ ERROR\ CREATING\ RESOURCE\ NODE\ FOR\ URI\:\ {0}=Error desconocido al crear el nodo de recursos  para el URI: {0}
 ERROR\ CREATING\ RESOURCE\ NODE\ FOR\ URI\:\ {0}=Error al crear el nodo de recursos  para el URI: {0}
-COULD\ NOT\ DELETE\ NODES\ BECAUSE\ AN\ ERROR\ OCCURRED\ WHILE\ SAVING\ HISTORY\ FOR\ NODE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=No se pudieron eliminar los nodos porque se ha producido un error al guardar su historial. Ver registro de errores para m\u00e1s detalles.
+COULD\ NOT\ DELETE\ NODES\ BECAUSE\ AN\ ERROR\ OCCURRED\ WHILE\ SAVING\ HISTORY\ FOR\ NODE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=No se pudieron eliminar los nodos porque se ha producido un error al guardar el historial del nodo. Ver registro de errores para m\u00e1s detalles.
 ERROR\ WHILE\ MOVING\ NODES=Error al mover los nodos
-COULD\ NOT\ MOVE\ NODES\ BECAUSE\ AN\ ERROR\ OCCURRED\ WHILE\ SAVING\ HISTORY\ FOR\ NODE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=No se pudieron mover los nodos porque se ha producido un error al guardar su historial. Ver registro de errores para m\u00e1s detalles.
+COULD\ NOT\ MOVE\ NODES\ BECAUSE\ AN\ ERROR\ OCCURRED\ WHILE\ SAVING\ HISTORY\ FOR\ NODE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=No se pudieron mover los nodos porque se ha producido un error al guardar el historial del nodo. Ver registro de errores para m\u00e1s detalles.
 {0}\ ALREADY\ EXISTS\ IN\ {1}\ AND\ WILL\ NOT\ BE\ ADDED\ AGAIN={0} ya existe en {1} y no se agregar\u00e1 otra vez
 CANNOT\ LINK\ OR\ MOVE\ A\ NODE\ INTO\ ITSELF=No se puede enlazar o mover un nodo dentro de s\u00ed mismo 
 LOADING\ ERROR=Error al cargar
@@ -330,7 +330,9 @@ DELETE\ THE\ NODE\ {0}?=\u00bfEliminar el nodo "{0}"?
 DELETE\ %D\ NODES\ FROM\ THEIR\ PARENT\ '%S'?=\u00bfEliminar %d nodos de su nodo primario '%s'?\nSe guardar\u00e1n los cambios pendientes.\n
 DELETE\ THE\ NODE\ '%S'\ FROM\ ITS\ PARENT\ '%S'?=\u00bfEliminar el nodo '%s' de su nodo primario '%s'?\nSe guardar\u00e1n los cambios pendientes.\n
 CANNOT\ COPY\ {0}\ TO\ {1}="No se puede copiar '{0}' en '{1}'"
-FOUND\ MORE\ RESULTS\ THAN\ CAN\ BE\ DISPLAYED,\ ONLY\ SHOWING\ THE\ FIRST\ {0}\ RESULTS=Se han encontrado m\u00e1s resultados, aqu\u00ed se muestran s\u00f3lo los primeros {0} resultados
+FOUND\ MORE\ RESULTS\ THAN\ CAN\ BE\ DISPLAYED,\ ONLY\ SHOWING\ THE\ FIRST\ {0}\ RESULTS=Se han encontrado m\u00e1s resultados, aqu\u00ed se ven s\u00f3lo los primeros {0} resultados
 CANNOT\ SEARCH\ {0}\ BECAUSE\ IT\ DOES\ NOT\ HAVE\ AN\ ARCHIVE\ HANDLE=No se puede buscar "{0}" porque no tiene un apodo en el archivo
 DELETE\ FROM\ PARENT=Eliminar de nodo primario
 <P><STRONG>I/O\ EXCEPTION\ WHILE\ READING\ HELP\ CONTENTS</STRONG></P>=<p><strong>excepci\u00f3n I/O al leer el contenido de la gu\u00eda</strong></p>
+XSDCHECKER=Chequeador de XSD
+LANGUAGES\ TO\ DISPLAY\ IN\ THE\ FIELD\ LANGUAGE\ SELECT\ BOX\ FOR\ IMDI=Idiomas para poner en el men\u00fa desplegable del campo 'Descripci\u00f3n' (IMDI)
